# culinary_canvas

./: .env.example  .gitignore  README.md  answers.txt  pyproject.toml
apps/categories/: admin.py  models.py  serializers.py  urls.py  views.py
apps/categories/migrations/: 0001_initial.py
apps/interactions/: admin.py  models.py  serializers.py  urls.py  views.py
apps/interactions/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py
apps/recipes/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
apps/recipes/migrations/: 0001_initial.py  0002_initial.py
apps/users/: admin.py  managers.py  models.py  serializers.py  tasks.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py
core/: celery.py  settings.py  urls.py
